--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <!-- <script src="javadom.js"></script> -->
-    <script src="/javascripts/javadomjs.js"></script>
+    <script src="javascripts/javadomjs.js"></script>
 
     <!-- <div id="menu_wrap" class="bg_white">
         <div class="option">
